k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  selector:
    app.kubernetes.io/name: mlflow
  ports:
    - name: http
      port: 80
      targetPort: http
